--- a/style/Style.scss
+++ b/style/Style.scss
@@ -1,5 +1,8 @@
 html {
     font-size: 16px;
+    ul, li {
+        list-style: none;
+    }
 }
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Source+Serif+Pro&display=swap');
 
@@ -8,14 +11,12 @@ body {
     padding: 0;
     box-sizing: border-box;
     max-width: 1440px;
-    ul, li {
-        list-style: none;
-    }
+   /* 
     font-family: 'Roboto', sans-serif;
     a:link, a:active, a:focus, a:visited {
         text-decoration: none;
         color:#3A5F56;
-    }
+    }*/
 }
 /*div {
     border: 1px solid cadetblue;
@@ -332,8 +333,7 @@ body {
             margin: 0 auto;
             display: grid;
             grid-template-columns: 1fr;
-            grid-template-rows: 6rem 10rem auto 2rem 6rem;
-            gap: 2rem;
+            grid-template-rows: 4rem auto auto 3rem 6rem;
             .presetIntroWrap {
                 grid-column: 1/2;
                 grid-row: 2/3;
@@ -372,9 +372,8 @@ body {
             .presetGridWrap {
                 grid-row: 3/4;
                 grid-column: 1/2;
-                gap: 2rem;
-                margin: o auto;
                 display: grid;
+                justify-items: center;
                 grid-template-columns: 1fr 1fr 1fr;
                 grid-template-rows: 1fr;
                 .p_cell {
@@ -408,7 +407,7 @@ body {
                 .presetGridWrap__div1 {
                     grid-column: 1/2;
                     grid-row: 1/2;
-                    justify-self: center;
+                    justify-self: start;
                     .img_pr_cell {
                         background-image: url('../img/preset_01.png');
                     }
@@ -416,7 +415,6 @@ body {
                 .presetGridWrap__div2 {
                     grid-column: 2/3;
                     grid-row: 1/2;
-                    justify-self: center;
                     .img_pr_cell {
                         background-image: url('../img/preset_02.png');
                     }
@@ -424,7 +422,7 @@ body {
                 .presetGridWrap__div3 {
                     grid-column: 3/4;
                     grid-row: 1/2;
-                    justify-self: center;
+                    justify-self: end;
                     .img_pr_cell {
                         background-image: url('../img/preset_03.png');
                     }
@@ -434,6 +432,7 @@ body {
                 grid-row: 4/5;
                 grid-column: 1/4;
                 margin: 0 auto;
+                align-self: center;
                 .presetLinkWrap_span {
                     width: 7.3rem;
                     height: 1.5rem;
@@ -460,28 +459,29 @@ body {
         grid-template-columns: 1fr;
         grid-template-rows: 6rem auto 6rem;
         align-content: center;
-        background-color: darkkhaki;
+        background-color: #FFFFFF;
         .contactWrapGrid {
-            background-color: #FFFFFF;
-            max-width: 50rem;
-            margin: 0 auto;
             grid-column: 1/2;
             grid-row: 2/3;
+            background-color: #F4F3F0;
+            max-width: 50rem;
+            margin: 0 auto;
             display: grid;
-            grid-template-columns: 3fr 1fr;
-            grid-template-rows: 1fr;
+            grid-template-columns: 0.5fr 4fr 1fr 1.5fr 0.5fr;
+            grid-template-rows: 0.5fr 1fr 0.4fr;
+            border-radius: 1rem;
             .contactWrap__paragraph {
-                grid-column: 1/2;
-                grid-row: 1/2;
-                font-size: 1.75rem;
+                grid-column: 2/3;
+                grid-row: 2/3;
+                font-size: 1.5rem;
                 justify-self: center;
                 .contactWrap__paragraph_p {
-                    width: 19.6rem;
+                    //max-width: 19.6rem;
                 }
             }
             .contactWrap__btn_a {
-                grid-column: 2/3;
-                grid-row: 1/2;
+                grid-column: 4/5;
+                grid-row: 2/3;
                 align-self: center;
                 width: 7.8rem;
                 height: 3.6rem;
@@ -511,11 +511,13 @@ body {
         max-width: 75rem;
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 2fr 5fr 1fr;
+        grid-template-rows: 2fr 5fr 1fr 3rem;
+        gap: 1rem;
         .footerLogoWrap {
             grid-column: 1/2;
             grid-row: 1/2;
             justify-self: center;
+            align-self: center;
             .footerLogoWrap_span {
                 grid-row: 1/2;
                 grid-column: 1/2;
@@ -523,6 +525,7 @@ body {
                 height: 1.8rem;
                 background-image: url('../img/Logo_header.svg');
                 background-size: contain;
+                background-repeat: no-repeat;
             }
         }
         .footerColumnWrap {
@@ -531,6 +534,9 @@ body {
             display: grid;
             grid-template-columns: 1fr 1.5fr 1fr 2.5fr;
             grid-template-rows: 1fr 1.5fr;
+            .ch_cl {
+                color: #B87D58;
+            }
             .pages {
                 grid-column: 1/2;
                 grid-row: 1/2;
@@ -612,3 +618,4 @@ body {
         }
     }
 }
+
