--- a/style/Style.scss
+++ b/style/Style.scss
@@ -1,22 +1,21 @@
-html {
-    font-size: 16px;
-    ul, li {
-        list-style: none;
-    }
-}
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Source+Serif+Pro&display=swap');
 
-body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    max-width: 1440px;
-   /* 
-    font-family: 'Roboto', sans-serif;
-    a:link, a:active, a:focus, a:visited {
-        text-decoration: none;
-        color:#3A5F56;
-    }*/
+html {
+    font-size: 16px;
+    body {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        max-width: 1440px;
+        ul, li {
+            list-style: none;
+        }
+        font-family: 'Roboto', sans-serif;
+        a, a:link {
+            text-decoration: none;
+            color:#3A5F56;
+        }//a:visited, a:hover, a:active, a:focus
+    }
 }
 /*div {
     border: 1px solid cadetblue;
@@ -124,7 +123,7 @@ body {
             margin: 0 auto;
             display: grid;
             grid-template-columns: 1fr 1fr;
-            grid-template-rows: 6.25rem 48.3rem 6.25rem;
+            grid-template-rows: 6rem 48.3rem 6rem;
             .introLeft {
                 grid-column: 1/2;
                 grid-row: 2/3;
@@ -172,12 +171,13 @@ body {
             .introRight {
                 grid-column: 2/3;
                 grid-row: 2/3;
+                justify-self: end;
                 width: 100%; //34.5rem;
                 height: 100%; //48.3rem;
                 background-image: url('../img/James.png');
                 background-size: contain;
                 background-repeat: no-repeat;
-                background-position: center;
+                background-position: right;
             }
         }
     }
