--- a/style/Style.css
+++ b/style/Style.css
@@ -17,7 +17,9 @@ html {
     border: 1px solid cadetblue;
 }*/
 .header {
-  background-color: #FFFFFF; }
+  background-color: #FFFFFF;
+  position: relative;
+  z-index: 15; }
   .header .headerWrap {
     max-width: 75rem;
     margin: 0 auto;
@@ -97,7 +99,23 @@ html {
 
 .main .intro {
   background-color: #F4F3F0;
-  height: 60.8rem; }
+  height: 60.8rem;
+  position: relative;
+  z-index: 10; }
+  .main .intro .gradient_1 {
+    position: absolute;
+    height: 31rem;
+    width: 35rem;
+    left: 70%;
+    top: -6.25rem;
+    background: radial-gradient(50% 50% at 50% 50%, rgba(58, 95, 86, 0.55) 0%, rgba(58, 95, 86, 0) 100%); }
+  .main .intro .gradient_2 {
+    position: absolute;
+    width: 45.2rem;
+    height: 50.8rem;
+    top: 37.5rem;
+    right: 65%;
+    background: radial-gradient(50% 50% at 50% 50%, rgba(184, 125, 88, 0.8) 0%, rgba(184, 125, 88, 0) 100%); }
   .main .intro .introWrap {
     max-width: 75rem;
     margin: 0 auto;
@@ -151,7 +169,17 @@ html {
       background-repeat: no-repeat;
       background-position: right; }
 .main .services {
-  background-color: #FFFFFF; }
+  background-color: #FFFFFF;
+  position: relative;
+  z-index: 11; }
+  .main .services .gradientServices_1 {
+    z-index: 12;
+    position: absolute;
+    width: 50.3rem;
+    height: 41.4rem;
+    top: 62rem;
+    right: 76%;
+    background: radial-gradient(50% 50% at 50% 50%, rgba(58, 95, 86, 0.376) 0%, rgba(58, 95, 86, 0) 100%); }
   .main .services .servicesWrap {
     max-width: 75rem;
     margin: 0 auto;
@@ -266,7 +294,16 @@ html {
         .main .services .servicesWrap .servicesGridWrap .servicesGridWrap__div7 .s_cell_img {
           background-image: url("../img/s_07.svg"); }
 .main .preset {
-  background-color: #F4F3F0; }
+  background-color: #F4F3F0;
+  position: relative;
+  z-index: 12; }
+  .main .preset .gradientPreset {
+    position: absolute;
+    width: 32.2rem;
+    height: 31.3rem;
+    top: 35.4rem;
+    left: 79%;
+    background: radial-gradient(50% 50% at 50% 50%, rgba(219, 52, 59, 0.296) 0%, rgba(219, 52, 59, 0) 100%); }
   .main .preset .presetWrap {
     max-width: 75rem;
     margin: 0 auto;
@@ -369,46 +406,58 @@ html {
         height: 0.6rem;
         background-size: cover;
         margin-left: 0.2rem; }
-.main .contact .contactWrap {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 6rem auto 6rem;
-  align-content: center;
-  background-color: #FFFFFF; }
-  .main .contact .contactWrap .contactWrapGrid {
-    grid-column: 1/2;
-    grid-row: 2/3;
-    background-color: #F4F3F0;
-    max-width: 50rem;
-    margin: 0 auto;
+.main .contact {
+  position: relative;
+  z-index: 13; }
+  .main .contact .gradientContact {
+    position: absolute;
+    width: 53.4rem;
+    height: 48.3rem;
+    top: 10rem;
+    right: 47.6%;
+    background: radial-gradient(50% 50% at 50% 50%, rgba(184, 125, 88, 0.35) 0%, rgba(184, 125, 88, 0) 100%); }
+  .main .contact .contactWrap {
     display: grid;
-    grid-template-columns: 0.5fr 4fr 1fr 1.5fr 0.5fr;
-    grid-template-rows: 0.5fr 1fr 0.4fr;
-    border-radius: 1rem; }
-    .main .contact .contactWrap .contactWrapGrid .contactWrap__paragraph {
-      grid-column: 2/3;
+    grid-template-columns: 1fr;
+    grid-template-rows: 6rem auto 6rem;
+    align-content: center;
+    background-color: #FFFFFF; }
+    .main .contact .contactWrap .contactWrapGrid {
+      grid-column: 1/2;
       grid-row: 2/3;
-      font-size: 1.5rem;
-      justify-self: center; }
-    .main .contact .contactWrap .contactWrapGrid .contactWrap__btn_a {
-      grid-column: 4/5;
-      grid-row: 2/3;
-      align-self: center;
-      width: 7.8rem;
-      height: 3.6rem;
-      border-radius: 6px;
-      background-color: #3A5F56;
-      display: flex;
-      flex-flow: row nowrap;
-      justify-content: center;
-      align-items: center; }
-      .main .contact .contactWrap .contactWrapGrid .contactWrap__btn_a .contactWrap__btn {
-        width: 4.7rem;
-        height: 1.7rem;
-        color: #FFFFFF;
-        font-size: 1.2rem; }
+      background-color: #F4F3F0;
+      max-width: 50rem;
+      margin: 0 auto;
+      display: grid;
+      grid-template-columns: 0.5fr 4fr 1fr 1.5fr 0.5fr;
+      grid-template-rows: 0.5fr 1fr 0.4fr;
+      border-radius: 1rem; }
+      .main .contact .contactWrap .contactWrapGrid .contactWrap__paragraph {
+        grid-column: 2/3;
+        grid-row: 2/3;
+        font-size: 1.5rem;
+        justify-self: center; }
+      .main .contact .contactWrap .contactWrapGrid .contactWrap__btn_a {
+        grid-column: 4/5;
+        grid-row: 2/3;
+        align-self: center;
+        width: 7.8rem;
+        height: 3.6rem;
+        border-radius: 6px;
+        background-color: #3A5F56;
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: center;
+        align-items: center; }
+        .main .contact .contactWrap .contactWrapGrid .contactWrap__btn_a .contactWrap__btn {
+          width: 4.7rem;
+          height: 1.7rem;
+          color: #FFFFFF;
+          font-size: 1.2rem; }
 
 .footer {
+  position: relative;
+  z-index: 14;
   background-color: #292C32;
   color: #FFFFFF; }
   .footer .footerGridWrap {
