--- a/style/Style.scss
+++ b/style/Style.scss
@@ -23,6 +23,8 @@ html {
 
 .header {
     background-color: #FFFFFF;
+    position: relative;
+    z-index: 15;
     .headerWrap {
         max-width: 75rem;
         margin: 0 auto;
@@ -118,6 +120,24 @@ html {
     .intro {
         background-color: #F4F3F0;
         height: 60.8rem;
+        position: relative;   
+        z-index: 10;    
+        .gradient_1 {
+            position: absolute;
+            height: 31rem;
+            width: 35rem;
+            left: 70%;
+            top: -6.25rem;
+            background: radial-gradient(50% 50% at 50% 50%, rgba(58, 95, 86, 0.55) 0%, rgba(58, 95, 86, 0) 100%);
+        }
+        .gradient_2 {
+            position: absolute;
+            width: 45.2rem;
+            height: 50.8rem;
+            top: 37.5rem;
+            right: 65%;
+            background: radial-gradient(50% 50% at 50% 50%, rgba(184, 125, 88, 0.8) 0%, rgba(184, 125, 88, 0) 100%);
+        }
         .introWrap {
             max-width: 75rem;
             margin: 0 auto;
@@ -183,6 +203,17 @@ html {
     }
     .services {
         background-color:#FFFFFF;
+        position: relative;
+        z-index: 11;
+        .gradientServices_1 {
+            z-index: 12;
+            position: absolute;
+            width: 50.3rem;
+            height: 41.4rem;
+            top: 62rem;
+            right: 76%;
+            background: radial-gradient(50% 50% at 50% 50%, rgba(58, 95, 86, 0.376) 0%, rgba(58, 95, 86, 0) 100%);
+        }
         .servicesWrap {
             max-width: 75rem;
             margin: 0 auto;
@@ -328,6 +359,16 @@ html {
     }
     .preset {
         background-color: #F4F3F0;
+        position: relative;
+        z-index: 12;
+        .gradientPreset {
+            position: absolute;
+            width: 32.2rem;
+            height: 31.3rem;
+            top: 35.4rem;
+            left: 79%;
+            background: radial-gradient(50% 50% at 50% 50%, rgba(219, 52, 59, 0.296) 0%, rgba(219, 52, 59, 0) 100%);
+        }
         .presetWrap{
             max-width: 75rem;
             margin: 0 auto;
@@ -454,6 +495,16 @@ html {
         }
     }
     .contact {
+        position: relative;
+        z-index: 13;
+        .gradientContact {
+            position: absolute;
+            width: 53.4rem;
+            height: 48.3rem;
+            top: 10rem;
+            right: 47.6%;
+            background: radial-gradient(50% 50% at 50% 50%, rgba(184, 125, 88, 0.35) 0%, rgba(184, 125, 88, 0) 100%);
+        }
         .contactWrap {
         display: grid;
         grid-template-columns: 1fr;
@@ -504,6 +555,8 @@ html {
    
 }
 .footer {
+    position: relative;
+    z-index: 14;
     background-color: #292C32;
     color: #FFFFFF;
     .footerGridWrap {
