--- a/style/Style.css
+++ b/style/Style.css
@@ -14,9 +14,6 @@ html {
       text-decoration: none;
       color: #3A5F56; }
 
-/*div {
-    border: 1px solid cadetblue;
-}*/
 .header {
   background-color: #FFFFFF;
   position: relative;
@@ -24,6 +21,7 @@ html {
   .header .headerWrap {
     max-width: 75rem;
     margin: 0 auto;
+    padding: 0 2rem;
     display: grid;
     grid-template-rows: 4.37rem;
     grid-template-columns: 1fr 0.5fr 1.5fr;
@@ -102,7 +100,8 @@ html {
   background-color: #F4F3F0;
   height: 60.8rem;
   position: relative;
-  z-index: 10; }
+  z-index: 10;
+  padding: 0 2rem; }
   .main .intro .gradient_1 {
     position: absolute;
     height: 31rem;
@@ -172,7 +171,8 @@ html {
 .main .services {
   background-color: #FFFFFF;
   position: relative;
-  z-index: 11; }
+  z-index: 11;
+  padding: 0 2rem; }
   .main .services .gradientServices_1 {
     z-index: 12;
     position: absolute;
@@ -213,7 +213,8 @@ html {
         font-family: 'Source Serif Pro', serif;
         font-size: 2rem;
         line-height: 0.4rem;
-        text-align: center; }
+        text-align: center;
+        color: #3A5F56; }
       .main .services .servicesWrap .servicesIntroWrap .servicesIntroWrap__p {
         grid-column: 1/2;
         grid-row: 3/4;
@@ -297,7 +298,8 @@ html {
 .main .preset {
   background-color: #F4F3F0;
   position: relative;
-  z-index: 12; }
+  z-index: 12;
+  padding: 0 2rem; }
   .main .preset .gradientPreset {
     position: absolute;
     width: 32.2rem;
@@ -356,10 +358,10 @@ html {
         box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
         background-color: #FFFFFF; }
       .main .preset .presetWrap .presetGridWrap .img_pr_cell {
-        width: 100%;
+        max-width: 100%;
         height: 15.8rem;
         display: block;
-        background-size: contain;
+        background-size: cover;
         background-repeat: no-repeat;
         background-position: center; }
       .main .preset .presetWrap .presetGridWrap .h4_pr_cell {
@@ -370,7 +372,7 @@ html {
       .main .preset .presetWrap .presetGridWrap .pr_cell_p {
         font-family: 'Roboto', sans-serif;
         font-size: 1rem;
-        line-height: 1.4;
+        line-height: 1.4rem;
         padding: 0 1rem; }
       .main .preset .presetWrap .presetGridWrap .presetGridWrap__div1 {
         grid-column: 1/2;
@@ -463,6 +465,7 @@ html {
   color: #FFFFFF; }
   .footer .footerGridWrap {
     margin: 0 auto;
+    padding: 0 2rem;
     max-width: 75rem;
     display: grid;
     grid-template-columns: 1fr;
@@ -506,12 +509,32 @@ html {
         grid-column: 4/5;
         grid-row: 1/2; }
         .footer .footerGridWrap .footerColumnWrap .newsletter .newsletter_search_wrap .newsletter_search {
-          display: block;
+          display: grid;
+          grid-template-columns: 2fr 1fr;
+          grid-template-rows: 1fr;
+          justify-items: center;
+          align-content: center;
           width: 28.6rem;
           height: 3.3rem;
-          background-color: #F9FAFB;
+          background-color: #FFFFFF;
           border: 1px solid #E5E7EB;
           border-radius: 8px; }
+          .footer .footerGridWrap .footerColumnWrap .newsletter .newsletter_search_wrap .newsletter_search .email {
+            grid-column: 1/2;
+            grid-row: 1/2;
+            border: none;
+            display: inline-block;
+            width: 90%; }
+          .footer .footerGridWrap .footerColumnWrap .newsletter .newsletter_search_wrap .newsletter_search .submit {
+            grid-column: 2/3;
+            grid-row: 1/2;
+            align-self: center;
+            display: inline-block;
+            width: 4.4rem;
+            height: 2.4rem;
+            border-radius: 0.6rem;
+            background-color: #292C32;
+            color: #FFFFFF; }
       .footer .footerGridWrap .footerColumnWrap .storeCategories {
         grid-column: 1/2;
         grid-row: 2/3; }
@@ -522,16 +545,21 @@ html {
       grid-column: 1/2;
       grid-row: 3/4;
       display: grid;
-      grid-template-columns: 7fr 2fr 3fr;
+      grid-template-columns: 7fr 1fr 3fr 1fr;
       grid-template-rows: 1fr;
       justify-content: center;
       align-items: center; }
       .footer .footerGridWrap .footerInfo .rights {
         grid-column: 1/2;
         grid-row: 1/2; }
+        .footer .footerGridWrap .footerInfo .rights .webflow {
+          padding-left: 1rem; }
       .footer .footerGridWrap .footerInfo .social {
         grid-column: 3/4;
-        grid-row: 1/2; }
+        grid-row: 1/2;
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: space-around; }
         .footer .footerGridWrap .footerInfo .social .linkedin a {
           display: inline-block;
           width: 24px;
