--- a/style/Style.scss
+++ b/style/Style.scss
@@ -18,10 +18,6 @@ html {
         }//a:visited, a:hover, a:active, a:focus
     }
 }
-/*div {
-    border: 1px solid cadetblue;
-}*/
-
 .header {
     background-color: #FFFFFF;
     position: relative;
@@ -29,6 +25,7 @@ html {
     .headerWrap {
         max-width: 75rem;
         margin: 0 auto;
+        padding: 0 2rem;
         display: grid;
         grid-template-rows: 4.37rem;
         grid-template-columns: 1fr 0.5fr 1.5fr;
@@ -122,7 +119,8 @@ html {
         background-color: #F4F3F0;
         height: 60.8rem;
         position: relative;   
-        z-index: 10;    
+        z-index: 10;  
+        padding: 0 2rem;  
         .gradient_1 {
             position: absolute;
             height: 31rem;
@@ -206,6 +204,7 @@ html {
         background-color:#FFFFFF;
         position: relative;
         z-index: 11;
+        padding: 0 2rem;
         .gradientServices_1 {
             z-index: 12;
             position: absolute;
@@ -249,6 +248,7 @@ html {
                     font-size: 2rem;
                     line-height: 0.4rem;
                     text-align: center;
+                    color: #3A5F56;
                 }
                 .servicesIntroWrap__p {
                     grid-column: 1/2;
@@ -362,6 +362,7 @@ html {
         background-color: #F4F3F0;
         position: relative;
         z-index: 12;
+        padding: 0 2rem;
         .gradientPreset {
             position: absolute;
             width: 32.2rem;
@@ -426,10 +427,10 @@ html {
                     background-color: #FFFFFF;
                 }
                 .img_pr_cell {
-                    width: 100%;
+                    max-width: 100%;
                     height: 15.8rem;
                     display: block;
-                    background-size: contain;
+                    background-size: cover;
                     background-repeat: no-repeat;
                     background-position: center;
                 }
@@ -442,7 +443,7 @@ html {
                 .pr_cell_p {
                     font-family: 'Roboto', sans-serif;
                     font-size: 1rem;
-                    line-height: 1.4;
+                    line-height: 1.4rem;
                     padding: 0 1rem;
                 }
 
@@ -562,6 +563,7 @@ html {
     color: #FFFFFF;
     .footerGridWrap {
         margin: 0 auto;
+        padding: 0 2rem;
         max-width: 75rem;
         display: grid;
         grid-template-columns: 1fr;
@@ -615,12 +617,34 @@ html {
                 grid-row: 1/2;
                 .newsletter_search_wrap {
                     .newsletter_search{
-                        display: block;
+                        display: grid;
+                        grid-template-columns: 2fr 1fr;
+                        grid-template-rows: 1fr;
+                        justify-items: center;
+                        align-content: center;
                         width: 28.6rem;
                         height: 3.3rem;
-                        background-color: #F9FAFB;
+                        background-color: #FFFFFF;
                         border: 1px solid #E5E7EB;
                         border-radius: 8px;
+                        .email {
+                            grid-column: 1/2;
+                            grid-row: 1/2;
+                            border: none;
+                            display: inline-block;
+                            width: 90%;
+                        }
+                        .submit {
+                            grid-column: 2/3;
+                            grid-row: 1/2;
+                            align-self: center;
+                            display: inline-block;
+                            width: 4.4rem;
+                            height: 2.4rem;
+                            border-radius: 0.6rem;
+                            background-color: #292C32;
+                            color: #FFFFFF;
+                        }
                     }
                 }
             }
@@ -637,7 +661,7 @@ html {
             grid-column: 1/2;
             grid-row: 3/4;
             display: grid;
-            grid-template-columns: 7fr 2fr 3fr;
+            grid-template-columns: 7fr 1fr 3fr 1fr;
             grid-template-rows: 1fr;
             justify-content: center;
             align-items: center;
@@ -645,10 +669,16 @@ html {
             .rights {
                 grid-column: 1/2;
                 grid-row: 1/2;
+                .webflow {
+                    padding-left: 1rem;
+                }
             }
             .social {
                 grid-column: 3/4;
                 grid-row: 1/2;
+                display: flex;
+                flex-flow: row nowrap;
+                justify-content: space-around;
                 .linkedin a {
                     display: inline-block;
                     width: 24px;
