--- a/style/Style.scss
+++ b/style/Style.scss
@@ -3,10 +3,9 @@
 html {
     font-size: 16px;
     body {
-        margin: 0;
+        margin: 0 auto;
         padding: 0;
         box-sizing: border-box;
-        max-width: 1440px;
         ul, li {
             list-style: none;
             padding-inline-start: 0px;
@@ -15,7 +14,7 @@ html {
         a, a:link {
             text-decoration: none;
             color:#3A5F56;
-        }//a:visited, a:hover, a:active, a:focus
+        }
     }
 }
 .header {
@@ -117,7 +116,7 @@ html {
 .main {
     .intro {
         background-color: #F4F3F0;
-        height: 60.8rem;
+        max-height: 60.8rem;
         position: relative;   
         z-index: 10;  
         padding: 0 2rem;  
@@ -142,7 +141,7 @@ html {
             margin: 0 auto;
             display: grid;
             grid-template-columns: 1fr 1fr;
-            grid-template-rows: 6rem 48.3rem 6rem;
+            grid-template-rows: 5rem 48.3rem 5rem;
             .introLeft {
                 grid-column: 1/2;
                 grid-row: 2/3;
@@ -420,14 +419,15 @@ html {
                 grid-template-columns: 1fr 1fr 1fr;
                 grid-template-rows: 1fr;
                 .p_cell {
-                    width: 23.6rem;
-                    height: 27.4rem;
+                    max-width: 23.6rem;
+                    max-height: auto;
                     border-radius: 1rem;
                     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
                     background-color: #FFFFFF;
+                    margin: 1rem;
                 }
                 .img_pr_cell {
-                    max-width: 100%;
+                    width: auto;
                     height: 15.8rem;
                     display: block;
                     background-size: cover;
@@ -714,6 +714,41 @@ html {
                     background-repeat: no-repeat;
                     background-position: center;
                     background-size: cover;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 59.3rem) {
+    .header {
+        .headerWrap {
+            max-width: 59.3rem;
+            display: grid; 
+            grid-template-rows: 4.37rem;
+            grid-template-columns: 0.5fr 0.1fr 2.3fr;
+        } 
+    }
+    .main {
+        .intro {
+            max-height: 100%;
+            .introWrap {
+                max-width: 59rem;
+                display: grid;
+                grid-template-columns: 1fr;
+                grid-template-rows: 1rem 1fr 1fr 0.1rem;
+                .introLeft {
+                    grid-column: 1/2;
+                    grid-row: 3/4;
+
+                }
+                .introRight {
+                    grid-column: 1/2;
+                    grid-row: 2/3;
+                    justify-self: center;
+                    background-position: center;
+                    max-height: 48rem;
+                
                 }
             }
         }
