--- a/style/Style.css
+++ b/style/Style.css
@@ -12,6 +12,8 @@ html {
     html body a, html body a:link {
       text-decoration: none;
       color: #3A5F56; }
+    html body #email:focus {
+      outline: none; }
 
 .header {
   background-color: #FFFFFF;
@@ -514,8 +516,8 @@ html {
           grid-template-rows: 1fr;
           justify-items: center;
           align-content: center;
-          width: 28.6rem;
-          height: 3.3rem;
+          max-width: 28.6rem;
+          max-height: 3.3rem;
           background-color: #FFFFFF;
           border: 1px solid #E5E7EB;
           border-radius: 8px; }
@@ -553,7 +555,8 @@ html {
         grid-column: 1/2;
         grid-row: 1/2; }
         .footer .footerGridWrap .footerInfo .rights .webflow {
-          padding-left: 1rem; }
+          padding-left: 0.4rem;
+          color: #DB343B; }
       .footer .footerGridWrap .footerInfo .social {
         grid-column: 3/4;
         grid-row: 1/2;
@@ -651,6 +654,39 @@ html {
     grid-template-rows: 1fr 3fr 1fr; }
     .main .contact .contactWrap .contactWrapGrid {
       grid-column: 2/3;
-      grid-row: 2/3; } }
+      grid-row: 2/3; }
+
+  .footer .footerGridWrap {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 0.5fr 1.5fr 0.4fr; }
+    .footer .footerGridWrap .footerColumnWrap {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1.3fr 1fr;
+      grid-template-rows: 1fr 1fr;
+      gap: 0.5rem; }
+      .footer .footerGridWrap .footerColumnWrap .pages {
+        grid-column: 1/2;
+        grid-row: 1/2; }
+      .footer .footerGridWrap .footerColumnWrap .presetPacks {
+        grid-column: 1/2;
+        grid-row: 2/3; }
+      .footer .footerGridWrap .footerColumnWrap .utilityPages {
+        grid-column: 2/3;
+        grid-row: 2/3; }
+      .footer .footerGridWrap .footerColumnWrap .newsletter {
+        grid-column: 2/5;
+        grid-row: 1/2; }
+      .footer .footerGridWrap .footerColumnWrap .storeCategories {
+        grid-column: 4/5;
+        grid-row: 2/3; }
+      .footer .footerGridWrap .footerColumnWrap .businesAreas {
+        grid-column: 3/4;
+        grid-row: 2/3; } }
+@media screen and (max-width: 42rem) {
+  .main .services .servicesWrap .servicesGridWrap .p_cell_p {
+    font-size: 0.7rem; }
+  .main .services .servicesWrap .servicesGridWrap .s_cell_h4 {
+    font-size: 1rem; } }
 
 /*# sourceMappingURL=Style.css.map */
