--- a/style/Style.scss
+++ b/style/Style.scss
@@ -1,121 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Source+Serif+Pro&display=swap');
+@import url('../style/header.css');
+
 
 html {
     font-size: 16px;
-    body {
-        margin: 0 auto;
-        padding: 0;
-        box-sizing: border-box;
-        ul, li {
-            list-style: none;
-            padding-inline-start: 0px;
-        }
-        font-family: 'Roboto', sans-serif;
-        a, a:link {
-            text-decoration: none;
-            color:#3A5F56;
-        }
-        #email:focus {
-            outline: none;
-        }
-    }
-}
-.header {
-    background-color: #FFFFFF;
-    position: relative;
-    z-index: 15;
-    .headerWrap {
-        max-width: 75rem;
-        margin: 0 auto;
-        padding: 0 2rem;
-        display: grid;
-        grid-template-rows: 4.37rem;
-        grid-template-columns: 1fr 0.5fr 1.5fr;
-        justify-content: space-evenly;
-        align-items: center;
-        .logo {
-            grid-row: 1/2;
-            grid-column: 1/2;
-            width: 7rem;
-            height: 1.8rem;
-            background-image: url('../img/Logo_header.svg');
-            background-size: contain;
-            background-repeat: no-repeat;
-        }
-        .navigation__ul {
-            grid-row: 1/2;
-            grid-column: 3/4;
-            display: grid;
-            grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1.4fr;
-            grid-template-rows: 1fr;
-            justify-content: space-between;
-            align-items: center;
-            font-size: 1rem;
-            a:hover {
-                text-decoration: underline;
-                color:#3A5F56;
-            }
-            .navigation__presets {
-                grid-column: 1/2;
-                grid-row: 1/2;
-            }
-            .navigation__prints {
-                grid-column: 2/3;
-                grid-row: 1/2;
-            }
-            .navigation__store {
-                grid-column: 3/4;
-                grid-row: 1/2;
-            }
-            .navigation__about {
-                grid-column: 4/5;
-                grid-row: 1/2;
-            }
-            .navigation__contact {
-                grid-column: 5/6;
-                grid-row: 1/2;
-            }
-            .navigation__cart {
-                grid-column: 6/7;
-                grid-row: 1/2;
-                justify-self: center;
-                display: flex;
-                flex-flow: row nowrap;
-                justify-content: center;
-                align-items: center;
-                width: 7.6rem;
-                height: 2.7rem;
-                border-radius: 6px;
-                background-color: #3A5F56;
-                a {
-                    color: #FFFFFF;
-                }
-                .cart__href::before {
-                    content: "";
-                    display: inline-block;
-                    background-image: url('../img/basket.svg');
-                    width: 1rem;
-                    height: 1rem;
-                    background-size: cover;
-                    margin-right: 0.4rem;
-                }
-                .navigation__cart_count {
-                margin-left: 0.3rem;
-                display: flex;
-                flex-flow: row nowrap;
-                justify-content: center;
-                align-items: center;
-                width: 1.2rem;
-                height: 1.1rem;
-                border-radius: 0.6rem;
-                font-size: 0.6rem;
-                background-color: #FFFFFF;
-                }
-            }
-        }
-    }
+    margin: 0 auto;
+    box-sizing: border-box;
+
+    --basic-title-color: #3A5F56;
+    --text-color: #292C32;
+    --basic-background-color: #F4F3F0;
+    --title-red: #DB343B;
+    --just-white: #FFFFFF;
+
 }
 
+
+
+
+
+
+/*
 .main {
     .intro {
         background-color: #F4F3F0;
@@ -871,4 +776,4 @@ html {
             }
         }
     }
-}
+} */
